crates/tinc/build/src/codegen/cel/functions/snapshots/tinc_build__codegen__cel__functions__contains__tests__contains_runtime.snap
---
source: crates/tinc/build/src/codegen/cel/functions/contains.rs
expression: compiled
---
exit status: 0
--- stdout 
#![feature(prelude_import)]
#[prelude_import]
use std::prelude::rust_2024::*;
#[macro_use]
extern crate std;
#[allow(dead_code)]
fn bytes_conv(
    input: &std::string::String,
) -> Result<bool, ::tinc::__private::cel::CelError<'_>> {
    Ok(
        ::tinc::__private::cel::CelValue::cel_contains(
            ::tinc::__private::cel::CelValueConv::conv(input),
            ::tinc::__private::cel::CelValue::Number(
                ::tinc::__private::cel::NumberTy::I64(2i64),
            ),
        )?,
    )
}
